--- a/packages/backend/discovery/worldcoin/optimism/config.jsonc
+++ b/packages/backend/discovery/worldcoin/optimism/config.jsonc
@@ -6,8 +6,8 @@
   "names": {
     "0x7B46fFbC976db2F94C3B3CDD9EbBe4ab50E3d77d": "RecurringGrantDrop",
     "0xe11CEfF5034278dC62318e74aF6efBA57D54f3be": "WLDGrant",
-    "0xB3E7771a6e2d7DD8C0666042B7a07C39b938eb7d": "OpWorldID_New",
-    "0x42FF98C4E85212a5D31358ACbFe76a621b50fC02": "OpWorldID_Old",
+    "0xB3E7771a6e2d7DD8C0666042B7a07C39b938eb7d": "OpWorldID_One",
+    "0x42FF98C4E85212a5D31358ACbFe76a621b50fC02": "OpWorldID_Zero",
     "0x57f928158C3EE7CDad1e4D8642503c4D0201f611": "WorldIDRouterV1"
   },
   "overrides": {
@@ -20,11 +20,25 @@
     "WLDGrant": {
       "ignoreMethods": ["getAmount"]
     },
-    "OpWorldID_New": {
-      "ignoreMethods": ["rootHistory"]
+    "OpWorldID_One": {
+      "ignoreMethods": ["rootHistory"],
+      "fields": {
+        "verifier": {
+          "type": "storage",
+          "slot": 3,
+          "returnType": "address"
+        }
+      }
     },
-    "OpWorldID_Old": {
-      "ignoreMethods": ["rootHistory"]
+    "OpWorldID_Zero": {
+      "ignoreMethods": ["rootHistory"],
+      "fields": {
+        "verifier": {
+          "type": "storage",
+          "slot": 4,
+          "returnType": "address"
+        }
+      }
     },
     "WorldIDRouterV1": {
       "ignoreMethods": ["proxiableUUID"]
