Add X Layer (full)

--- a/packages/backend/discovery/xlayer/ethereum/config.jsonc
+++ b/packages/backend/discovery/xlayer/ethereum/config.jsonc
@@ -1,17 +1,16 @@
 {
   "$schema": "https://raw.githubusercontent.com/l2beat/tools/main/schemas/config.schema.json",
   "chain": "ethereum",
-  "name": "astarzkevm",
+  "name": "xlayer",
   "initialAddresses": ["0x5132A183E9F3CB7C848b0AAC5Ae0c4f0491B7aB2"],
   "names": {
     "0x5132A183E9F3CB7C848b0AAC5Ae0c4f0491B7aB2": "PolygonRollupManager",
     "0x2a3DD3EB832aF982ec71669E178424b10Dca2EDe": "Bridge",
-    "0x1E163594e13030244DCAf4cDfC2cd0ba3206DA80": "AstarValidiumEtrog",
-    "0x0775e11309d75aA6b0967917fB0213C5673eDf81": "AstarVerifier",
-    "0x9CCD205052c732Ac1Df2cf7bf8aACC0E371eE0B0": "AstarValidiumDAC",
-    "0xf98ee8c46baEa2B11e4f0450AD9D01861265F76E": "ProxyAdminOwner",
+    "0x2B0ee28D4D51bC9aDde5E58E295873F61F4a0507": "XLayerValidiumEtrog",
+    "0x0775e11309d75aA6b0967917fB0213C5673eDf81": "XLayerVerifier",
     "0x580bda1e7A0CFAe92Fa7F6c20A3794F169CE3CFb": "GlobalExitRootV2",
     "0x455e53CBB86018Ac2B8092FdCd39d8444aFFC3F6": "POL",
+    "0x05652Ec92366F3C2255991a265c499E01Ba58e6a": "XLayerValidiumDAC",
     "0x0F99738B2Fc14D77308337f3e2596b63aE7BCC4A": "SharedProxyAdmin"
   },
   "overrides": {
@@ -41,7 +40,7 @@
         "rollupData": {
           "type": "call",
           "method": "rollupIDToRollupData",
-          "args": [2], // astar ID
+          "args": [3], // X Layer ID
           "pickFields": [
             "rollupContract",
             "chainID",
@@ -54,7 +53,7 @@
       }
     },
     "Bridge": { "ignoreDiscovery": true },
-    "AstarValidiumDAC": {
+    "XLayerValidiumDAC": {
       "fields": {
         "members": {
           "type": "array",
@@ -63,7 +62,7 @@
         }
       }
     },
-    "AstarValidiumEtrog": {
+    "XLayerValidiumEtrog": {
       "ignoreInWatchMode": ["lastAccInputHash"]
     },
     "POL": {
