--- a/packages/backend/discovery/polygonzkevm/ethereum/config.jsonc
+++ b/packages/backend/discovery/polygonzkevm/ethereum/config.jsonc
@@ -11,7 +11,7 @@
   "names": {
     "0x5132A183E9F3CB7C848b0AAC5Ae0c4f0491B7aB2": "PolygonRollupManager",
     "0x2a3DD3EB832aF982ec71669E178424b10Dca2EDe": "Bridge",
-    "0x242daE44F5d8fb54B198D03a94dA45B5a4413e21": "AdminMultisig",
+    "0x242daE44F5d8fb54B198D03a94dA45B5a4413e21": "ProxyAdminOwner",
     "0xf0CDE1E7F0FAD79771cd526b1Eb0A12F69582C01": "wstETHBridge",
     "0x70E70e58ed7B1Cec0D8ef7464072ED8A52d755eB": "usdcBridge",
     "0x4A27aC91c5cD3768F140ECabDe3FC2B2d92eDb98": "daiBridge",
@@ -19,7 +19,8 @@
     "0x519E42c24163192Dca44CD3fBDCEBF6be9130987": "PolygonZkEVMEtrog",
     "0x0775e11309d75aA6b0967917fB0213C5673eDf81": "PolygonzkEVMVerifier",
     "0x455e53CBB86018Ac2B8092FdCd39d8444aFFC3F6": "PolygonEcosystemToken",
-    "0x580bda1e7A0CFAe92Fa7F6c20A3794F169CE3CFb": "GlobalExitRootV2"
+    "0x580bda1e7A0CFAe92Fa7F6c20A3794F169CE3CFb": "GlobalExitRootV2",
+    "0x0F99738B2Fc14D77308337f3e2596b63aE7BCC4A": "ProxyAdmin"
   },
   "overrides": {
     "PolygonRollupManager": {
@@ -43,6 +44,7 @@
         "totalSequencedBatches",
         "totalVerifiedBatches"
       ],
+      "ignoreInWatchMode": ["rollupCount"],
       "fields": {
         "rollupData": {
           "type": "call",
@@ -73,7 +75,7 @@
       "ignoreMethods": ["proxiableUUID"],
       "ignoreInWatchMode": ["totalBridgedDAI"]
     },
-    "AdminMultisig": {
+    "ProxyAdminOwner": {
       "ignoreMethods": ["nonce"]
     },
     "EscrowsAdmin": {
