--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -139,10 +139,10 @@
   "tradable": true,
   "world": true,
   "wormholeV1": true,
-  "x1": true,
   "xai": true,
   "xchain": true,
   "xdai": true,
+  "xlayer": false,
   "zentachain": true,
   "zircuit": true,
   "zkcandy": true,
