--- a/packages/backend/discovery/metis/ethereum/config.jsonc
+++ b/packages/backend/discovery/metis/ethereum/config.jsonc
@@ -2,7 +2,10 @@
   "$schema": "https://raw.githubusercontent.com/l2beat/tools/main/schemas/config.schema.json",
   "chain": "ethereum",
   "name": "metis",
-  "initialAddresses": ["0x3980c9ed79d2c191A89E02Fa3529C60eD6e9c04b", "0xD54c868362C2098E0E46F12E7D924C6A332952Dd"],
+  "initialAddresses": [
+    "0x3980c9ed79d2c191A89E02Fa3529C60eD6e9c04b",
+    "0xD54c868362C2098E0E46F12E7D924C6A332952Dd"
+  ],
   "names": {
     "0x10739F09f6e62689c0aA8A1878816de9e166d6f9": "ChainStorageContainer",
     "0xA2FaAAC9120c1Ff75814F0c6DdB119496a12eEA6": "StateCommitmentChain",
@@ -10,18 +13,29 @@
     "0x9E32b13ce7f2E80A01932B42553652E053D6ed8e": "MToken",
     "0xD54c868362C2098E0E46F12E7D924C6A332952Dd": "LockingPool",
     "0x918778e825747a892b17C66fe7D24C618262867d": "Lib_AddressManager",
-    "0x014e8248D3B681d4ed703dE60885052Ff4321F5d": "StakingPoolManager"
+    "0x0fe382b74C3894B65c10E5C12ae60Bbd8FAf5b48": "LockingInfo",
+    "0x735Aad08c5eF7620b6422E85613f8335Ec07b573": "EquilibriaStakingPool"
   },
   "overrides": {
+    "EquilibriaStakingPool": {
+      // StakingPool owner deployed by Equilibria Finance
+      "ignoreDiscovery": true
+    },
+    "LockingInfo": {
+      "ignoreInWatchMode": ["totalLocked"]
+    },
     "LockingPool": {
-          "fields": {
-            "sequencers":{
-              "startIndex": 1,
-              "type": "array",
-              "length": "{{ totalSequencers }}"
-            }
-          },
-          "ignoreInWatchMode": ["rewardRecipient"] // this is an address on L2
+      "fields": {
+        "sequencers": {
+          // each sequencer entry has: amount uint256, reward uint256, activationBatch uint256, updatedBatch uint256, deactivationBatch uint256, deactivationTime uint256, unlockClaimTime uint256, nonce uint256, owner address, signer address, pubkey bytes, rewardRecipient address, status uint8
+          "startIndex": 1,
+          "type": "array",
+          "length": "{{ totalSequencers }}"
+        }
+      },
+      "ignoreMethods": ["curBatchState"], // interesting for finality?
+      "ignoreInWatchMode": ["currentBatch", "totalSequencers"],
+      "ignoreRelatives": ["rewardRecipient"]
     },
     "Lib_AddressManager": {
       "fields": {
@@ -169,6 +183,9 @@
         "length",
         "lengthByChainId"
       ]
+    },
+    "0x62478E4eeb4070fE399866aB05e821AB97200947": {
+      "ignoreInWatchMode": ["nonce"]
     },
     "0x56a76bcC92361f6DF8D75476feD8843EdC70e1C9": {
       "ignoreInWatchMode": [
