Add X Layer (full) (#3478)
Co-authored-by: vincfurc <10850139+vincfurc@users.noreply.github.com>

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -139,10 +139,10 @@
   "tradable": true,
   "world": true,
   "wormholeV1": true,
-  "x1": true,
   "xai": true,
   "xchain": true,
   "xdai": true,
+  "xlayer": true,
   "zentachain": true,
   "zircuit": true,
   "zkcandy": true,
