--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1865,6 +1865,19 @@
         "slug": "fraxferry"
       },
       "coingeckoId": "staked-frax-ether"
+    },
+    {
+      "symbol": "MEOW",
+      "address": "0x79db8c67d0c33203da4efb58f7d325e1e0d4d692",
+      "type": "NMV",
+      "formula": "circulatingSupply",
+      "coingeckoId": "zeek-coin"
+    },
+    {
+      "symbol": "ZORRO",
+      "address": "0x244c238325fc1bdf6eded726ee1b47d55895d944",
+      "type": "NMV",
+      "formula": "circulatingSupply"
     }
   ],
   "bobanetwork": [
