Eigenlayer discovery: Ignore new AVSs in watch mode

--- a/packages/backend/discovery/eigenlayer/ethereum/config.jsonc
+++ b/packages/backend/discovery/eigenlayer/ethereum/config.jsonc
@@ -174,7 +174,8 @@
           "valueKey": "avs"
         }
       },
-      "ignoreRelatives": ["avs"]
+      "ignoreRelatives": ["avs"],
+      "ignoreInWatchMode": ["avs"]
     },
     // ignore discovery, should be ignoreRelative in a strategy but it does not work
     "0xae78736Cd615f374D3085123A210448E74Fc6393": { "ignoreDiscovery": true },
