fix native assets

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1339,6 +1339,10 @@
       "address": "0xD77B108d4f6cefaa0Cae9506A934e825BEccA46E",
       "type": "NMV",
       "formula": "circulatingSupply"
+    },
+    {
+      "symbol": "ETH",
+      "category": "ether"
     }
   ],
   "optimism": [
