--- a/packages/backend-tools/package.json
+++ b/packages/backend-tools/package.json
@@ -30,9 +30,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.13.1",
+    "@types/elasticsearch": "^5.0.43",
+    "@types/uuid": "^9.0.8",
     "chalk": "^4.1.2",
     "dotenv": "^16.3.1",
-    "error-stack-parser": "^2.1.4"
+    "error-stack-parser": "^2.1.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@sinonjs/fake-timers": "^11.1.0",
