fix copypaste error

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1796,7 +1796,7 @@
       "address": "0x80137510979822322193FC997d400D5A6C747bf7",
       "type": "NMV",
       "formula": "totalSupply",
-      "coingeckoId": "kelp-dao-restaked-eth",
+      "coingeckoId": "stakestone-ether",
       "bridgedUsing": {
         "bridge": "Layer Zero",
         "slug": "omnichain"
