--- a/packages/backend/discovery/eigenda/ethereum/config.jsonc
+++ b/packages/backend/discovery/eigenda/ethereum/config.jsonc
@@ -10,7 +10,9 @@
     "0x00000000219ab540356cBB839Cbe05303d7705Fa": "DepositContract",
     "0x91E677b07F7AF907ec9a428aafA9fc14a0d3A338": "EigenPodManager",
     "0x0BAAc79acD45A023E19345c352d8a7a83C4e5656": "RegistryCoordinator",
-    "0xBE1685C81aA44FF9FB319dD389addd9374383e90": "EigenLayerOperationsMultisig"
+    "0xBE1685C81aA44FF9FB319dD389addd9374383e90": "EigenLayerOperationsMultisig",
+    "0x369e6F597e22EaB55fFb173C6d9cD234BD699111": "EigenLayerExecutorMultisig",
+    "0xFEA47018D632A77bA579846c840d5706705Dc598": "EigenLayerCommunityMultisig"
   },
   "overrides": {
     "eigenDAServiceManager": {
@@ -27,6 +29,12 @@
       "ignoreInWatchMode": ["numPods"]
     },
     "EigenLayerOperationsMultisig": {
+      "ignoreInWatchMode": ["nonce"]
+    },
+    "EigenLayerExecutorMultisig": {
+      "ignoreInWatchMode": ["nonce"]
+    },
+    "EigenLayerCommunityMultisig": {
       "ignoreInWatchMode": ["nonce"]
     },
     "RegistryCoordinator": {
