--- a/packages/asset-risk/package.json
+++ b/packages/asset-risk/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.9.28",
     "wagmi": "^2.7.0",
     "zod": "^3.23.0"
