--- a/packages/asset-risk/package.json
+++ b/packages/asset-risk/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start -p 8080",
-    "lint": "next lint",
+    "lint": "cross-env SKIP_ENV_VALIDATION=1 next lint",
     "format": "prettier --check .",
     "format:fix": "prettier --write ."
   },
@@ -40,6 +40,7 @@
     "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.2",
     "eslint-plugin-simple-import-sort": "^12.1.0",
