Add RPC_URL env for ethereum mainnet

--- a/packages/asset-risk/package.json
+++ b/packages/asset-risk/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.9.28",
