--- a/packages/asset-risk/package.json
+++ b/packages/asset-risk/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start -p 8080",
-    "lint": "cross-env SKIP_ENV_VALIDATION=1 next lint",
+    "lint": "next lint",
     "format": "prettier --check .",
     "format:fix": "prettier --write ."
   },
