--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -497,6 +497,10 @@
       "address": "0xdeFA4e8a7bcBA345F687a2f1456F5Edd9CE97202"
     },
     {
+      "symbol": "KOI",
+      "address": "0x9d14bce1daddf408d77295bb1be9b343814f44de"
+    },
+    {
       "symbol": "KP3R",
       "address": "0x1cEB5cB57C4D4E2b2433641b95Dd330A33185A44"
     },
@@ -1900,6 +1904,12 @@
     {
       "symbol": "ZORRO",
       "address": "0x244c238325fc1bdf6eded726ee1b47d55895d944",
+      "type": "NMV",
+      "formula": "circulatingSupply"
+    },
+    {
+      "symbol": "HOLD",
+      "address": "0xed4040fd47629e7c8fbb7da76bb50b3e7695f0f2",
       "type": "NMV",
       "formula": "circulatingSupply"
     }
