--- a/packages/discovery/package.json
+++ b/packages/discovery/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@l2beat/backend-tools": "*",
     "@l2beat/discovery-types": "*",
+    "@l2beat/shared-pure": "*",
     "@mradomski/fast-solidity-parser": "0.1.1",
     "chalk": "^4.1.2",
     "deep-diff": "^1.0.2",
