--- a/packages/config/biome.json
+++ b/packages/config/biome.json
@@ -1,9 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.7.0/schema.json",
+  "extends": ["../../biome.json"],
   "files": {
     "ignore": [
-      "node_modules/",
-      "build/",
       "src/bridges/multichain-config.json",
       "src/bridges/socket-vaults.json",
       "src/verification/*/verified.json",
@@ -11,29 +9,5 @@
       "scripts/multichain/cache.json",
       "scripts/multichain/intermediate.json"
     ]
-  },
-  "formatter": {
-    "enabled": true,
-    "formatWithErrors": false,
-    "indentStyle": "space",
-    "indentWidth": 2,
-    "lineEnding": "lf",
-    "lineWidth": 80,
-    "attributePosition": "auto"
-  },
-  "organizeImports": { "enabled": false },
-  "linter": { "enabled": false },
-  "javascript": {
-    "formatter": {
-      "jsxQuoteStyle": "double",
-      "quoteProperties": "asNeeded",
-      "trailingComma": "all",
-      "semicolons": "asNeeded",
-      "arrowParentheses": "always",
-      "bracketSpacing": true,
-      "bracketSameLine": false,
-      "quoteStyle": "single",
-      "attributePosition": "auto"
-    }
   }
 }
