--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -290,6 +290,10 @@
       "address": "0x761D38e5ddf6ccf6Cf7c55759d5210750B5D60F3"
     },
     {
+      "symbol": "ENA",
+      "address": "0x57e114B691Db790C35207b2e685D4A43181e6061"
+    },
+    {
       "symbol": "ENJ",
       "address": "0xF629cBd94d3791C9250152BD8dfBDF380E2a3B9c"
     },
