temporarily remove erroring permission

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -115,6 +115,7 @@
   "rari": true,
   "reddioex": true,
   "reddiozkvm": true,
+  "redstone": true,
   "rise": true,
   "ronin": true,
   "rss3": true,
