fill reya.ts info

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -116,6 +116,7 @@
   "reddioex": true,
   "reddiozkvm": true,
   "redstone": true,
+  "reya": true,
   "rise": true,
   "ronin": true,
   "rss3": true,
