--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "yarn": ">=1.22.0 <2"
   },
   "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
+    "packages": ["packages/*"]
   },
   "scripts": {
     "build": "turbo run build",
