--- a/packages/backend/discovery/metis/ethereum/config.jsonc
+++ b/packages/backend/discovery/metis/ethereum/config.jsonc
@@ -30,6 +30,8 @@
           // each sequencer entry has: amount uint256, reward uint256, activationBatch uint256, updatedBatch uint256, deactivationBatch uint256, deactivationTime uint256, unlockClaimTime uint256, nonce uint256, owner address, signer address, pubkey bytes, rewardRecipient address, status uint8
           "startIndex": 1,
           "type": "array",
+          // status: Unavailabe, Inactive, Active, Unlocked (Exited, the sequencer has no locked tokens, and it's no longer produce blocks on L2)
+          "pickFields": ["owner", "signer", "rewardRecipient", "status"],
           "length": "{{ totalSequencers }}"
         }
       },
