Fix lint errors in shared and shared-pure

--- a/biome.json
+++ b/biome.json
@@ -74,7 +74,7 @@
         "noDuplicateElseIf": "error"
       },
       "suspicious": {
-        "noAssignInExpressions": "error",
+        "noAssignInExpressions": "off",
         "noAsyncPromiseExecutor": "error",
         "noCatchAssign": "error",
         "noClassAssign": "error",
@@ -87,7 +87,7 @@
         "noDuplicateClassMembers": "error",
         "noDuplicateObjectKeys": "error",
         "noDuplicateParameters": "error",
-        "noEmptyBlockStatements": "error",
+        "noEmptyBlockStatements": "off",
         "noExplicitAny": "error",
         "noExtraNonNullAssertion": "error",
         "noFallthroughSwitchClause": "error",
