--- a/packages/backend/discovery/zora/ethereum/config.jsonc
+++ b/packages/backend/discovery/zora/ethereum/config.jsonc
@@ -31,25 +31,7 @@
       "ignoreInWatchMode": ["params"]
     },
     "L2OutputOracle": {
-      "ignoreMethods": [
-        "getL2OutputAfter",
-        "getL2OutputIndexAfter",
-        "getL2Output",
-        "computeL2Timestamp"
-      ],
-      "ignoreInWatchMode": [
-        "nextBlockNumber",
-        "nextOutputIndex",
-        "latestBlockNumber",
-        "latestOutputIndex"
-      ],
-      "fields": {
-        "deletedOutputs": {
-          "type": "stateFromEvent",
-          "event": "OutputsDeleted",
-          "returnParams": ["prevNextOutputIndex", "newNextOutputIndex"]
-        }
-      }
+      "extends": "opstack/L2OutputOracle"
     },
     "ZoraMultisig": {
       "ignoreInWatchMode": ["nonce"]
