--- a/packages/asset-risk/package.json
+++ b/packages/asset-risk/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
+    "type-fest": "^4.18.1",
     "typescript": "^5.4.5"
   }
 }
