--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "build:dependencies": "turbo run build --filter=frontend^... --filter=backend^...",
     "clean": "turbo run clean",
     "fix": "yarn lint:fix && yarn format:fix",
-    "format": "turbo run format",
+    "format": "wsrun -ecam format",
     "format:fix": "wsrun -ecam format:fix",
-    "lint": "turbo run lint",
+    "lint": "wsrun -ecam lint",
     "lint:fix": "wsrun -ecam lint:fix",
     "start": "cd packages/backend && yarn start",
     "test": "turbo run test -- --reporter progress",
