--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,11 +12,11 @@
     "discover:raw": "discovery discover",
     "discover:dev": "cd ../discovery && yarn build && cd - && yarn discover --dev",
     "discover:single": "discovery single-discovery",
-    "format": "biome check .",
+    "format": "biome format .",
     "format:fix": "biome format --write .",
     "invert": "discovery invert",
-    "lint": "eslint --ext .ts,.tsx --max-warnings 0 src scripts",
-    "lint:fix": "yarn lint --fix",
+    "lint": "biome check --formatter-enabled=false .",
+    "lint:fix": "biome check --formatter-enabled=false --apply .",
     "run-kroma-propose-script": "ts-node ./discovery/kroma/ethereum/script-ts/propose.ts",
     "start": "node -r source-map-support/register build/src/index.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
