--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,9 +14,9 @@
     "build:dependencies": "cd ../.. && yarn build:dependencies",
     "clean": "rm -rf build",
     "format:fix": "biome format --write .",
-    "format": "biome check .",
-    "lint:fix": "yarn lint --fix",
-    "lint": "eslint --ext .ts,.tsx --max-warnings 0 src",
+    "format": "biome format .",
+    "lint:fix": "biome check --formatter-enabled=false --apply .",
+    "lint": "biome check --formatter-enabled=false .",
     "start": "yarn start:staging",
     "start:local": "DEPLOYMENT_ENV=local gulp watch",
     "start:mock": "DEPLOYMENT_ENV=local MOCK=true gulp watch",
