--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,9 +8,9 @@
     "build": "tsc -p tsconfig.build.json",
     "clean": "rm -rf build",
     "format:fix": "biome format --write .",
-    "format": "biome check .",
-    "lint:fix": "yarn lint --fix",
-    "lint": "eslint --ext .ts --max-warnings 0 src scripts",
+    "format": "biome format .",
+    "lint:fix": "biome check --formatter-enabled=false --apply .",
+    "lint": "biome check --formatter-enabled=false .",
     "test": "mocha",
     "typecheck": "tsc --noEmit",
     "get-lz-data": "node -r esbuild-register scripts/omnichain",
