--- a/packages/discovery-types/package.json
+++ b/packages/discovery-types/package.json
@@ -22,10 +22,10 @@
     "clean": "rm -rf dist",
     "build": "tsc",
     "start": "node -r esbuild-register src/",
-    "format": "biome check .",
+    "format": "biome format .",
     "format:fix": "biome format --write .",
-    "lint:fix": "yarn lint --fix",
-    "lint": "eslint --ext .ts,.tsx --max-warnings 0 src",
+    "lint:fix": "biome check --formatter-enabled=false --apply .",
+    "lint": "biome check --formatter-enabled=false .",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
