--- a/packages/shared-pure/package.json
+++ b/packages/shared-pure/package.json
@@ -9,9 +9,9 @@
     "build": "tsc -p tsconfig.build.json",
     "clean": "rm -rf build",
     "format:fix": "biome format --write .",
-    "format": "biome check .",
-    "lint:fix": "yarn lint --fix",
-    "lint": "eslint --ext .ts --max-warnings 0 src",
+    "format": "biome format .",
+    "lint:fix": "biome check --formatter-enabled=false --apply .",
+    "lint": "biome check --formatter-enabled=false .",
     "test": "mocha",
     "typecheck": "tsc --noEmit"
   },
