--- a/packages/uif-example/package.json
+++ b/packages/uif-example/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "format": "biome check .",
+    "format": "biome format .",
     "format:fix": "biome format --write .",
-    "lint:fix": "yarn lint --fix",
-    "lint": "eslint --ext .ts,.tsx --max-warnings 0 src",
+    "lint:fix": "biome check --formatter-enabled=false --apply .",
+    "lint": "biome check --formatter-enabled=false .",
     "typecheck": "tsc --noEmit",
     "start": "node -r esbuild-register src/index.ts"
   },
