Add ZERO token to Linea

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -1673,6 +1673,12 @@
       "type": "NMV",
       "formula": "circulatingSupply",
       "coingeckoId": "foxy"
+    },
+    {
+      "symbol": "ZERO",
+      "address": "0x78354f8DcCB269a615A7e0a24f9B0718FDC3C7A7",
+      "type": "NMV",
+      "formula": "circulatingSupply"
     }
   ],
   "zkfair": [
