--- a/biome.json
+++ b/biome.json
@@ -61,6 +61,7 @@
         "useYield": "error"
       },
       "style": {
+        "useForOf": "error",
         "noDefaultExport": "error",
         "noNamespace": "error",
         "noNonNullAssertion": "error",
