Initial cyber.ts

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -30,7 +30,7 @@
   "connext": true,
   "coti": true,
   "cronos": true,
-  "cyberconnect": true,
+  "cyber": true,
   "davos": true,
   "dcamonster": true,
   "debank": true,
