Rss3 update: Ignore fee params in watch mode

--- a/packages/backend/discovery/rss3/ethereum/config.jsonc
+++ b/packages/backend/discovery/rss3/ethereum/config.jsonc
@@ -66,10 +66,8 @@
           "type": "opStackSequencerInbox",
           "sequencerAddress": "{{ batcherHash }}"
         }
-      }
+      },
+      "ignoreInWatchMode": ["scalar", "overhead"]
     }
-  },
-  "AdminMultisig": {
-    "ignoreInWatchMode": ["nonce"]
   }
 }
