--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "yarn": ">=1.22.0 <2"
   },
   "workspaces": {
-    "packages": ["packages/*"]
+    "packages": [
+      "packages/*"
+    ]
   },
   "scripts": {
     "build": "turbo run build",
     "build:backend": "turbo run build --filter=backend",
     "build:frontend": "turbo run build --filter=frontend",
-    "build:dependencies": "turbo run build --filter=frontend^... --filter=backend^...",
+    "build:dependencies": "turbo run build --filter=frontend^... --filter=backend^...  --filter=asset-risk^...",
     "clean": "turbo run clean",
     "fix": "yarn lint:fix && yarn format:fix",
     "format": "wsrun -ecam format",
