--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "turbo run build",
     "build:backend": "turbo run build --filter=backend",
     "build:frontend": "turbo run build --filter=frontend",
-    "build:dependencies": "turbo run build --filter=frontend^... --filter=backend^...",
+    "build:dependencies": "turbo run build --filter=frontend^... --filter=backend^...  --filter=asset-risk^...",
     "clean": "turbo run clean",
     "fix": "yarn lint:fix && yarn format:fix",
     "format": "wsrun -ecam format",
