add tBTC token (Threshold)

--- a/packages/config/src/tokens/tokens.jsonc
+++ b/packages/config/src/tokens/tokens.jsonc
@@ -930,6 +930,10 @@
       "address": "0x0f2D719407FdBeFF09D87557AbB7232601FD9F29"
     },
     {
+      "symbol": "tBTC",
+      "address": "0x18084fbA666a33d37592fA2633fD49a74DD93a88"
+    },
+    {
       "symbol": "TEL",
       "address": "0x467Bccd9d29f223BcE8043b84E8C8B282827790F"
     },
