--- a/packages/backend/discovery/bob/ethereum/config.jsonc
+++ b/packages/backend/discovery/bob/ethereum/config.jsonc
@@ -17,8 +17,9 @@
     "0x8AdeE124447435fE03e3CD24dF3f4cAE32E65a3E": "OptimismPortal",
     "0xACB886b75D76d1c8d9248cFdDfA09b70C71c5393": "SystemConfig",
     "0xdDa53E23f8a32640b04D7256e651C1db98dB11C1": "L2OutputOracle",
-    "0xC77F8768774E1c9244BEed705C4354f2113CFc09": "DepositSecurityModule",
-    "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "LidoAgent"
+    "0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c": "LidoAgent",
+    "0xC73b6E6ec346f9f1A07D2e7A4380858D7BEa0194": "UsdcBridgeOwnerMultisig",
+    "0xC91482A96e9c2A104d9298D1980eCCf8C4dc764E": "RollupOwnerMultisig"
   },
   "overrides": {
     "L1UsdcBridge":{
@@ -69,9 +70,6 @@
           "sequencerAddress": "{{ batcherHash }}"
         }
       }
-    },
-    "DepositSecurityModule": {
-      "ignoreMethods": [ "canDeposit" ]
-    },
+    }
   }
 }
