Kinto update: l2AllowList settable

--- a/packages/config/src/verification/projects.json
+++ b/packages/config/src/verification/projects.json
@@ -101,6 +101,7 @@
   "palm": true,
   "paradex": true,
   "parallel": true,
+  "playchain": true,
   "pNetwork": true,
   "polygon-miden": true,
   "polygon-plasma": false,
