--- a/packages/backend/discovery/shared-eigenlayer/ethereum/config.jsonc
+++ b/packages/backend/discovery/shared-eigenlayer/ethereum/config.jsonc
@@ -1,7 +1,7 @@
 {
   "$schema": "../../../../discovery/schemas/config.schema.json",
   "chain": "ethereum",
-  "name": "eigenlayer",
+  "name": "shared-eigenlayer",
   "initialAddresses": [
     "0x858646372CC42E1A627fcE94aa7A7033e7CF075A",
     "0x135DDa560e946695d6f155dACaFC6f1F25C1F5AF"
