--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     ]
   },
   "scripts": {
-    "build": "turbo run build --filter=asset-risk^...",
+    "build": "turbo run build --filter=!asset-risk",
     "build:asset-risk": "turbo run build --filter=asset-risk",
     "build:backend": "turbo run build --filter=backend",
     "build:frontend": "turbo run build --filter=frontend",
