--- a/packages/backend/discovery/nova/ethereum/config.jsonc
+++ b/packages/backend/discovery/nova/ethereum/config.jsonc
@@ -10,14 +10,15 @@
   ],
   "names": {
     "0x2B081fbaB646D9013f2699BebEf62B7e7d7F0976": "ValidatorUtils",
-    "0x71D78dC7cCC0e037e12de1E50f5470903ce37148": "ProxyAdmin 1",
+    "0x71D78dC7cCC0e037e12de1E50f5470903ce37148": "ProxyAdmin",
     "0x5613AF0474EB9c528A34701A5b1662E3C8FA0678": "ProxyAdmin 2",
     "0xa8f7DdEd54a726eB873E98bFF2C95ABF2d03e560": "ProxyAdmin 3",
     "0x97f63339374fCe157Aa8Ee27830172d2AF76A786": "L1DaiGateway",
     "0xFb209827c58283535b744575e11953DCC4bEAD88": "RollupProxy",
     "0x211E1c4c7f1bF5351Ac850Ed10FD68CFfCF6c21b": "SequencerInbox",
     "0xC234E41AE2cb00311956Aa7109fC801ae8c80941": "ValidatorOwnerMultisig",
-    "0xd0FDA6925f502a3a94986dfe7C92FE19EBbD679B": "BatchPosterManagerMultisig"
+    "0xd0FDA6925f502a3a94986dfe7C92FE19EBbD679B": "BatchPosterManagerMultisig",
+    "0xF06E95eF589D9c38af242a8AAee8375f14023F85": "SecurityCouncil"
   },
   "overrides": {
     "ValidatorUtils": {
