--- a/packages/backend/discovery/shared-eigenlayer/ethereum/config.jsonc
+++ b/packages/backend/discovery/shared-eigenlayer/ethereum/config.jsonc
@@ -198,6 +198,9 @@
     "EigenlayerCommunityMultisig": {
       "ignoreInWatchMode": ["nonce"]
     },
+    "EigenlayerTokenMultisig":{
+      "ignoreInWatchMode": ["nonce"]
+    },
     "EigenLayerBeaconOracle": {
       "ignoreMethods": ["findBlockRoot", "timestampToBlockRoot"]
     },
