--- a/biome.json
+++ b/biome.json
@@ -73,7 +73,15 @@
         "noDelete": "error"
       },
       "nursery": {
-        "noDuplicateElseIf": "error"
+        "noDuplicateElseIf": "error",
+        "noRestrictedImports": {
+          "level": "error",
+          "options": {
+            "paths": {
+              "console": "Do not use console"
+            }
+          }
+        }
       },
       "suspicious": {
         "noAssignInExpressions": "off",
