--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
           node-version: 18.x
           cache: "yarn"
 
+      - name: Setup Bun environment
+        uses: oven-sh/setup-bun@v1
+
       - name: Install dependencies
         run: yarn --frozen-lockfile
 
