Upgrade L2OutputOracle template

--- a/packages/backend/discovery/_templates/opstack/L2OutputOracle/template.jsonc
+++ b/packages/backend/discovery/_templates/opstack/L2OutputOracle/template.jsonc
@@ -14,9 +14,11 @@
   ],
   "fields": {
     "deletedOutputs": {
-      "type": "stateFromEvent",
-      "event": "OutputsDeleted",
-      "returnParams": ["prevNextOutputIndex", "newNextOutputIndex"]
+      "handler": {
+        "type": "stateFromEvent",
+        "event": "OutputsDeleted",
+        "returnParams": ["prevNextOutputIndex", "newNextOutputIndex"]
+      }
     }
   }
 }
