--- a/packages/backend/discovery/_templates/opstack/L2OutputOracle/template.jsonc
+++ b/packages/backend/discovery/_templates/opstack/L2OutputOracle/template.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "../../../../../discovery/schemas/contract.schema.json",
+  "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
   "ignoreMethods": [
     "getL2OutputAfter",
     "getL2OutputIndexAfter",
