Remove meta.json in L2OutputOracle template

--- a/packages/backend/discovery/_templates/opstack/L2OutputOracle/template.jsonc
+++ b/packages/backend/discovery/_templates/opstack/L2OutputOracle/template.jsonc
@@ -1,5 +1,6 @@
 {
   "$schema": "../../../../../discovery/schemas/contract.v2.schema.json",
+  "description": "Central actor allowed to post new L2 state roots to L1.",
   "ignoreMethods": [
     "getL2OutputAfter",
     "getL2OutputIndexAfter",
