--- a/packages/backend/discovery/cyber/ethereum/config.jsonc
+++ b/packages/backend/discovery/cyber/ethereum/config.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://raw.githubusercontent.com/l2beat/tools/main/schemas/config.schema.json",
+  "$schema": "../../../../discovery/schemas/config.v2.schema.json",
   "chain": "ethereum",
   "name": "cyber",
   "initialAddresses": [
@@ -18,7 +18,7 @@
   },
   "overrides": {
     "ProxyAdminOwner": {
-      "ignoreInWatchMode": ["nonce"],
+      "ignoreInWatchMode": ["nonce"]
     },
     "OptimismPortal": {
       "ignoreMethods": ["isOutputFinalized"],
