--- a/packages/backend/discovery/shared-polygon-cdk/ethereum/config.jsonc
+++ b/packages/backend/discovery/shared-polygon-cdk/ethereum/config.jsonc
@@ -92,7 +92,8 @@
             "method": "rollupIDToRollupData",
             "startIndex": 1,
             "pickFields": ["rollupContract", "verifier"],
-            "length": "{{ rollupCount }}"
+            "length": "{{ rollupCount }}",
+            "ignoreRelative": true
           }
         },
         "rollupTypes": {
